Basic functionality implemented. Sorry for anyone reviewing it.